# bitvue

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_PATTERNS.md  EDGE_CASE_ANALYSIS_REPORT.md  EDGE_CASE_TEST_REPORT.md  LICENSE  LICENSE-COMMERICIAL  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_FIXES.md  TODO_ALL_ISSUES.md  TODO_CRITICAL.md  TODO_HIGH.md  TODO_MASTER.md  TODO_MEDIUM.md  TODO_PERFORMANCE_REMAINING.md  TODO_REFACTORING.md  TODO_SECURITY_REMAINING.md  cliff.toml  clippy.toml  deny.toml  git  index.html  lefthook.toml  package-lock.json  package.json  release-please-config.json  vite.config.ts
crates/abseil-rust/: Cargo.toml  LICENSE  README.md
crates/abseil-rust/benches/: hash_bench.rs  sorting_bench.rs  strings_bench.rs
crates/abseil-rust/fuzz/: README.md
crates/abseil-rust/src/: lib.rs
crates/abseil-rust/tests/: abnormal_input_tests.rs  concurrent_synchronization_tests.rs  integer_overflow_tests.rs  stress_tests.rs  thread_safety_tests.rs
crates/app/: Cargo.toml
crates/app/src/: app_async.rs  app_config.rs  app_decode.rs  app_input.rs  app_ui.rs  app_ui_menus.rs  app_ui_menus.rs.backup  app_ui_panels.rs  app_ui_toolbar.rs  app_update.rs  app_yuv_diff.rs  bitvue_app.rs  bytecache_worker.rs  config_worker.rs  decode_coordinator.rs  decode_worker.rs  export.rs  export_worker.rs  file_ops.rs  helpers.rs  lazy_workspace.rs  lib.rs  main.rs  notifications.rs  panel_registry.rs  panel_tab.rs  panel_tab_viewer.rs  parse_coordinator.rs  parse_worker.rs  parser_worker.rs  retry_policy.rs  settings.rs  syntax_builder.rs  workspace_registry.rs  yuv_diff.rs
crates/app/tests/: app_async_test.rs  app_config_test.rs  app_decode_test.rs  app_input_test.rs  app_ui_menus_test.rs  app_ui_panels_test.rs  app_ui_test.rs  app_ui_toolbar_test.rs  app_update_test.rs  app_yuv_diff_test.rs  async_workers_test.rs  bitvue_app_test.rs  bytecache_worker_test.rs  config_worker_test.rs  core_systems_test.rs  corrupt_file_parsing_test.rs  decode_coordinator_test.rs  decode_worker_test.rs  export_system_test.rs  export_test.rs  export_worker_test.rs  file_ops_test.rs  helpers_test.rs  input_handling_test.rs  integration_test.rs  layout_persistence_test.rs  lazy_workspace_test.rs  mv_extraction_test.rs  notifications_test.rs  panel_registry_test.rs  panel_tab_test.rs  panel_tab_viewer_test.rs  parse_coordinator_test.rs  parse_worker_test.rs  parser_worker_test.rs  retry_policy_test.rs  search_filter_test.rs  settings_test.rs  syntax_builder_test.rs  workspace_registry_test.rs  (+2 more)
crates/bitvue/: Cargo.toml
crates/bitvue-av1/: Cargo.toml
crates/bitvue-av1/benches/: overlay_extraction.rs
crates/bitvue-av1/src/: bitreader.rs  dependency.rs  frame_header.rs  ivf.rs  leb128.rs  lib.rs  obu.rs  overlay_extraction.rs  sequence.rs  types.rs
crates/bitvue-av1/tests/: bitreader_prop_tests.rs  bitreader_tests.rs  ivf_prop_tests.rs  leb128_prop_tests.rs  leb128_tests.rs  mv_extraction_test.rs  obu_tests.rs  overlay_extraction_integration_test.rs  overlay_extraction_test.rs  phase0_integration.rs  resilient_parser_test.rs  symbol_decoder_tests.rs
crates/bitvue-av3/: Cargo.toml
crates/bitvue-av3/src/: bitreader.rs  error.rs  frame_header.rs  lib.rs  metadata.rs  obu.rs  overlay_extraction.rs  sequence_header.rs
crates/bitvue-av3/tests/: integration_test.rs  overlay_extraction_test.rs
crates/bitvue-avc/: Cargo.toml
crates/bitvue-avc/src/: bitreader.rs  error.rs  frames.rs  lib.rs  nal.rs  overlay_extraction.rs  pps.rs  sei.rs  slice.rs  sps.rs  tests.rs
crates/bitvue-avc/tests/: avc_parser_test.rs  avc_stress_test.rs  bitreader_test.rs  coverage_hack_test.rs  error_comprehensive_test.rs  frames_comprehensive_test.rs  frames_edge_cases_test.rs  frames_extraction_test.rs  functional_coverage_test.rs  integration_test.rs  lib_api_test.rs  lib_parsing_test.rs  nal_parsing_test.rs  overlay_extraction_real_test.rs  overlay_extraction_test.rs  parsing_logic_test.rs  pps_comprehensive_test.rs  pps_extended_test.rs  pps_parsing_test.rs  pps_test.rs  sei_edge_cases_test.rs  sei_parsing_test.rs  sei_test.rs  slice_comprehensive_test.rs  slice_edge_cases_test.rs  slice_helper_test.rs  slice_parsing_comprehensive_test.rs  slice_parsing_real_test.rs  slice_parsing_test.rs  sps_extended_test.rs  sps_parsing_comprehensive_test.rs  sps_pps_parsing_test.rs
crates/bitvue-benchmarks/: Cargo.toml
crates/bitvue-benchmarks/benches/: bitreader.rs  export.rs  magic_bytes.rs
crates/bitvue-benchmarks/src/: bitreader.rs  export.rs  lib.rs  magic_bytes.rs
crates/bitvue-cli/: Cargo.toml
crates/bitvue-cli/src/: main.rs
crates/bitvue-cli/tests/: cli_commands_test.rs
crates/bitvue-codecs/: Cargo.toml
crates/bitvue-codecs-parser/: Cargo.toml
crates/bitvue-codecs-parser/src/: lib.rs  parser_strategy.rs
crates/bitvue-codecs-parser/tests/: codec_registry_test.rs
crates/bitvue-codecs/src/: lib.rs  parser_strategy.rs
crates/bitvue-codecs/tests/: codec_registry_test.rs
crates/bitvue-core/: Cargo.toml
crates/bitvue-core/src/: alignment.rs  alignment_test.rs  app_error.rs  bitreader.rs  block_metrics.rs  block_metrics_test.rs  byte_cache.rs  byte_cache_test.rs  cache_debug_overlay.rs  cache_debug_overlay_test.rs  cache_provenance.rs  cache_provenance_test.rs  cache_validation.rs  cache_validation_test.rs  codec_error.rs  command.rs  command_builder.rs  command_chain.rs  command_test.rs  compare.rs  compare_cache.rs  compare_cache_test.rs  compare_evidence.rs  (+121 more)
crates/bitvue-decode/: Cargo.toml
crates/bitvue-formats/: Cargo.toml
crates/bitvue-hevc/: Cargo.toml
crates/bitvue-log/: Cargo.toml
crates/bitvue-mcp/: Cargo.toml
crates/bitvue-metrics/: Cargo.toml  README.md
crates/bitvue-mpeg2/: Cargo.toml
crates/ui/: Cargo.toml  DEPRECATED.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: av1_decode.rs  ivf_parser.rs  leb128.rs  obu_parser.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  error.rs  lib.rs
src-tauri/tests/: integration_test.rs
(+1779 files in other folders)
