[workspace]
resolver = "2"
exclude = ["src-tauri", "fuzz"]  # Tauri app and fuzz targets have their own Cargo.toml
members = [
    # Main library
    "crates/bitvue",            # Unified library interface (re-exports all)

    # Core architecture
    "crates/bitvue-core",       # SelectionState, Command/Event bus, Worker runtime, Caches
    "crates/bitvue-formats",    # Container parsers (IVF, MP4, MKV, TS)
    "crates/bitvue-codecs",     # Unified codec interface (re-exports all codec parsers)
    "crates/bitvue-codecs-parser",  # Codec parsers integration layer
    "crates/bitvue-decode",     # Decoders (dav1d for AV1)
    "crates/bitvue-metrics",    # Quality metrics (PSNR, SSIM, VMAF)

    # CLI and tools
    "crates/bitvue-cli",        # CLI tool (terminal interface)
    "crates/bitvue-mcp",        # Model Context Protocol server
    "crates/bitvue-benchmarks", # Criterion-based performance benchmarks

    # Individual codec parsers (Pure Rust)
    "crates/bitvue-avc",        # AVC/H.264 parser
    "crates/bitvue-hevc",       # HEVC/H.265 parser
    "crates/bitvue-vp9",        # VP9 parser
    "crates/bitvue-vvc",        # VVC/H.266 parser
    "crates/bitvue-av1-codec",  # AV1 OBU parser
    "crates/bitvue-av3-codec",  # AV3 parser
    "crates/bitvue-mpeg2-codec", # MPEG-2 Video parser

    # Third-party dependencies (vendor/private)
    "crates/vendor/abseil",     # Abseil logging library (private fork)
]

[workspace.package]
version = "0.11.0"  # Bitvue 0.10.0 Release - VQAnalyzer Feature Parity
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/user/bitvue"
authors = ["bitvue contributors"]

[workspace.dependencies]
# Main library
bitvue = { path = "crates/bitvue" }

# Core architecture
bitvue-core = { path = "crates/bitvue-core" }
bitvue-formats = { path = "crates/bitvue-formats" }
bitvue-codecs = { path = "crates/bitvue-codecs" }
bitvue-codecs-parser = { path = "crates/bitvue-codecs-parser" }
bitvue-decode = { path = "crates/bitvue-decode" }
bitvue-metrics = { path = "crates/bitvue-metrics" }

# CLI and tools
bitvue-cli = { path = "crates/bitvue-cli" }
bitvue-mcp = { path = "crates/bitvue-mcp" }

# Vendor dependencies
abseil = { path = "crates/vendor/abseil", features = ["std", "base", "log"] }

# Codec parsers (direct access when needed)
bitvue-avc = { path = "crates/bitvue-avc" }
bitvue-hevc = { path = "crates/bitvue-hevc" }
bitvue-vp9 = { path = "crates/bitvue-vp9" }
bitvue-vvc = { path = "crates/bitvue-vvc" }
bitvue-av1-codec = { path = "crates/bitvue-av1-codec" }
bitvue-av3-codec = { path = "crates/bitvue-av3-codec" }
bitvue-mpeg2-codec = { path = "crates/bitvue-mpeg2-codec" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time/Date
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Performance hashing
twox-hash = "1.0"
tracing-subscriber = "0.3"
once_cell = "1.19"

# Async/Threading
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
rayon = "1.10"

# Decoding
dav1d = "0.10"

# Image processing
image = "0.25"

# File dialogs
rfd = "0.17"

# Testing
tempfile = "3.10"

# File I/O
memmap2 = "0.9"
bytes = "1.11"  # 1.11.1+ fixes GHSA-434x-w66g-qw3r
lru = "0.16"

# Release profile optimizations
[profile.release]
opt-level = 3           # Maximum optimization
lto = "thin"            # Link-time optimization (thin for faster builds)
codegen-units = 1       # Better optimization at cost of compile time
strip = true            # Strip symbols from binary
panic = "abort"         # Abort on panic (smaller binary)

# Release with debug info (for profiling)
[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# Development tools metadata
[workspace.metadata.lefthook]
# Install with: cargo install lefthook
# Run: lefthook install
