[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bitvue"
path = "src/main.rs"

[dependencies]
# Internal crates
bitvue-core = { workspace = true }
bitvue-av1 = { workspace = true }
bitvue-decode = { workspace = true }
ui = { workspace = true }

# GUI
eframe = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
rfd = "0.15"

# Error handling
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
dirs = "5.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitvue-log = { workspace = true }

# Async
crossbeam-channel = { workspace = true }
