[package]
name = "bitvue-av1"
description = "AV1 OBU bitstream parser for bitvue"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bench]]
name = "overlay_extraction"
harness = false

[dependencies]
bitvue-core = { workspace = true }
bitvue-formats = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
twox-hash = "1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
proptest-derive = "0.4"
