[package]
name = "bitvue-av3"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AV3 bitstream parser for bitvue"

[dependencies]
bitvue-core = { workspace = true }
abseil = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
