[package]
name = "bitvue-avc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "H.264/AVC bitstream parser for bitvue"

[lib]
name = "bitvue_avc"
path = "src/lib.rs"

[dependencies]
bitvue-core = { workspace = true }
abseil = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
