[package]
name = "bitvue-cli"
description = "CLI tool for bitvue bitstream analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bitvue-cli"
path = "src/main.rs"

[dependencies]
bitvue-core = { workspace = true }
bitvue-av1 = { workspace = true }
bitvue-formats = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
