[package]
name = "bitvue-codecs-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal crates (will integrate bitvue-av1-codec later)
bitvue-av1-codec = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
