[package]
name = "bitvue-core"
description = "Core types and traits for bitvue bitstream analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# ByteCache dependencies
memmap2 = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
# Codec-specific indexer features (optional, for faster compilation)
default = []
hevc-indexer = []
vp9-indexer = []
vvc-indexer = []
