[package]
name = "bitvue-formats"
description = "Container format parsers (MP4, MKV) for bitvue - zero external dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitvue-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
bitvue-hevc = { path = "../bitvue-hevc" }
bitvue-avc = { path = "../bitvue-avc" }
