[package]
name = "bitvue-hevc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HEVC/H.265 bitstream parser for bitvue"

[dependencies]
bitvue-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
