[package]
name = "bitvue-log"
version = "0.1.0"
edition = "2021"
description = "Abseil-style logging system for bitvue"
license = "MIT OR Apache-2.0"

[dependencies]
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
