[package]
name = "bitvue-mpeg2"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MPEG-2 Video bitstream parser for bitvue"

[dependencies]
bitvue-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
