[package]
name = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
bitvue-core = { workspace = true }

# GUI
egui = { workspace = true }
egui_extras = { workspace = true, features = ["image"] }
egui_plot = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Parallelization
rayon = { workspace = true }

# Serialization (for loading mock data)
serde = { workspace = true }
serde_json = { workspace = true }
